istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec:
  hosts:
  - api.cloudacademy.35.88.67.205.nip.io
  gateways:
  - api-gateway
  http:
  - route:
    - destination:
        host: api.default.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 25
    - destination:
        host: api.default.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 75
